crates/sui-adapter-transactional-tests/tests/size_limits/vector_len_limits.exp
processed 6 tasks

task 1 'publish'. lines 8-32:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpDAOs4w:11:14
   │
11 │     use std::vector;
   │              ^^^^^^ Unused 'use' of alias 'vector'. Consider removing it
   │
   = This alias does not shadow the built-in type 'vector' in type annotations.
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpDAOs4w:13:17
   │
13 │         let mut mut v: vector<u64> = vector::empty();
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier



task 2 'run'. lines 33-35:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'run'. lines 36-38:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'run'. lines 39-41:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 5 'run'. lines 42-42:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }
